# PyScada

./: .flake8  .gitignore  .gitmodules  AUTHORS  CHANGELOG.txt  LICENSE  MANIFEST.in  PyScadaDataAcquisitionDaemon.pyw  README.md  README.rst  build.sh  copyFilesAndRestard.sh  eslint.config.mjs  gunicorn_django  install.sh  install_docker.sh  install_system.sh  install_venv.sh  move_data.py  pyproject.toml  requirements.txt  setup.py  start_gunicorn
docker/: Dockerfile  docker-compose.yml  docker-compose.yml-tmp  docker-entrypoint.sh  nginx.conf
docker/PyScadaServer/: manage.py
docker/config/: requirements.pip
docker/docker-entrypoint-initdb.d/: init_db.sql
docker/mysql/: Dockerfile-tmp
docker/nginx/: Dockerfile  nginx.conf
docker/pyscada/: Dockerfile  pyscada  pyscada_init
docker/src/: manage.py
docs/: Makefile  backend.rst  command-line.rst  conf.py  control_item.rst  debian_like_systems.rst  develop.rst  device_protocol.rst  device_protokol.rst  django_settings.rst  docker.rst  frontend.rst  grafana.rst  index.md  index.rst  installation.rst  make.bat  model_relations.dia  nginx_setup.rst  phant.rst  plugin_install.rst  quick_install.rst  raspberryPiOS.rst  raspberry_pi.rst  setup_developmentsystem.md  systemd.rst  sysv-init.rst  uninstall.rst  update.rst  visa.rst
extras/: 0.7to0.8.sh  Grafana-test-dashboard.json  batch_export_data.py  calculatedVariablesUpdate.py  nginx_sample.conf  pyscada-logrotate  settings.py  start_gunicorn  urls.py
pyscada/: __init__.py  admin.py  apps.py  daemon.py  device.py  log.py  models.py  signals.py  tests.py  urls.py  views.py
pyscada/cache_datasource/: __init__.py  apps.py  models.py
pyscada/clients/: __init__.py  modbus.py
requirements/: common.txt  dev.txt
scada/: __init__.py  admin.py  clients.py  export.py  log.py  models.py  service.py  urls.py  views.py
tests/: test.sh  test_modbus.sh  test_without_plugins.sh
(+586 files in other folders)
